--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1047,3 +1047,9 @@ tr.child-no-padding-first th {
 tr.child-no-padding-first td {
   padding: 15px 10px 5px 10px;
 }
+
+td.inviter.column-inviter strong img {
+  float: left;
+  margin-right: 10px;
+  margin-top: 1px;
+}
