--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -40,6 +40,34 @@
 		padding: 0 0 $marg-lrg 0;
 	}
 
+	#whats-new-attachments {
+		.activity-attached-gif-container {
+			background-color: #ccd6dd;
+			border-radius: 6px;
+			box-shadow: inset 0 1px 0 rgba(0,0,0,0.05), 0 1px 0 rgba(255,255,255,0.5);
+			cursor: pointer;
+			display: inline-block;
+			font-size: 12px;
+			max-width: 312px;
+			overflow: hidden;
+			position: relative;
+
+			.gif-image-remove {
+				border-radius: 10px;
+				height: 19px;
+				right: 4px;
+				top: 4px;
+				width: 19px;
+			}
+
+			.gif-image-overlay {
+				color: #fff;
+				margin-top: 0;
+				position: absolute;
+			}
+		}
+	}
+
 	#whats-new-elements {
 		#whats-new-elements-buttons {
 			margin: 1em 0;
