--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1154,6 +1154,32 @@ a.layout-grid-view {
   padding: 0 0 20px 0;
 }
 
+.activity-update-form #whats-new-attachments .activity-attached-gif-container {
+  background-color: #ccd6dd;
+  border-radius: 6px;
+  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.05), 0 1px 0 rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  display: inline-block;
+  font-size: 12px;
+  max-width: 312px;
+  overflow: hidden;
+  position: relative;
+}
+
+.activity-update-form #whats-new-attachments .activity-attached-gif-container .gif-image-remove {
+  border-radius: 10px;
+  height: 19px;
+  right: 4px;
+  top: 4px;
+  width: 19px;
+}
+
+.activity-update-form #whats-new-attachments .activity-attached-gif-container .gif-image-overlay {
+  color: #fff;
+  margin-top: 0;
+  position: absolute;
+}
+
 .activity-update-form #whats-new-elements #whats-new-elements-buttons {
   margin: 1em 0;
 }
