--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -41,6 +41,9 @@
 	}
 
 	#whats-new-attachments {
+
+		margin-left: 8.5%;
+
 		.activity-attached-gif-container {
 			background-color: #ccd6dd;
 			border-radius: 6px;
@@ -82,6 +85,8 @@
 	}
 
 	#whats-new-toolbar {
+		margin-left: 8.5%;
+
 		.post-elements-buttons-item {
 			display: inline-block;
 			position: relative;
