--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1154,6 +1154,10 @@ a.layout-grid-view {
   padding: 0 0 20px 0;
 }
 
+.activity-update-form #whats-new-attachments {
+  margin-left: 8.5%;
+}
+
 .activity-update-form #whats-new-attachments .activity-attached-gif-container {
   background-color: #ccd6dd;
   border-radius: 6px;
@@ -1190,6 +1194,10 @@ a.layout-grid-view {
 
 .activity-update-form #whats-new-elements #whats-new-elements-buttons ul li {
   display: inline-block;
+}
+
+.activity-update-form #whats-new-toolbar {
+  margin-left: 8.5%;
 }
 
 .activity-update-form #whats-new-toolbar .post-elements-buttons-item {
@@ -1875,6 +1883,52 @@ a.layout-grid-view {
 
 #activity-close-link-suggestion:focus, #activity-link-preview-close-image:focus {
   outline: 0;
+}
+
+.activity-attached-gif-container {
+  cursor: pointer;
+  max-width: 480px;
+}
+
+.activity-attached-gif-container .gif-player {
+  position: relative;
+  max-width: 480px;
+}
+
+.activity-attached-gif-container .gif-player video {
+  margin: 0;
+}
+
+.activity-attached-gif-container .gif-play-button {
+  height: 80px;
+  width: 80px;
+  position: absolute;
+  left: 50%;
+  margin-left: -40px;
+  top: 50%;
+  margin-top: -40px;
+}
+
+.activity-attached-gif-container .gif-play-button span.dashicons {
+  font-size: 80px;
+  width: 80px;
+  height: 80px;
+  margin: 0;
+  padding: 0;
+  line-height: 0;
+}
+
+.activity-attached-gif-container .gif-icon {
+  background: url(../images/gif-symbol.png) bottom left no-repeat;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: block;
+  bottom: 30px;
+  left: 10px;
+  background-size: 40px 30px;
+  max-width: 40px;
+  max-height: 30px;
 }
 
 /* Media query for only large devices */
