--- a/src/bp-core/css/admin-bar.css
+++ b/src/bp-core/css/admin-bar.css
@@ -78,6 +78,9 @@
 	color: #fff;
 }
 
+li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bbp-repair"],
+li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bbp-converter"],
+li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bbp-reset"],
 li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bp-credits"],
 li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bp-appboss"] {
 	display: none !important;
