InProgress Admin > Activity -- ability to turn all BP activity feed items on/off

--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -1040,3 +1040,10 @@ td.inviter.column-inviter strong img {
   margin-left: 10px;
   margin-top: 1px;
 }
+
+td label.platform-activity {
+  clear: right;
+  display: block;
+  line-height: 1.5;
+  margin: 0 0 1em;
+}
