--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -1040,3 +1040,10 @@ td.inviter.column-inviter strong img {
   margin-right: 10px;
   margin-top: 1px;
 }
+
+td label.platform-activity {
+  clear: left;
+  display: block;
+  line-height: 1.5;
+  margin: 0 0 1em;
+}
