GIPHY api key UI

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -393,6 +393,11 @@ tr.bp-search-parent-field label {
 	font-weight: 400;
 }
 
+.bp-admin-card .form-table td p span.input-label {
+    color: #444;
+    font-weight: 500;
+}
+
 /* Settings */
 .bp-admin-card h2,
 .bp-admin-card.section-bp_main h2 {
