--- a/src/bp-templates/bp-nouveau/common-styles/_bp_magnific.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_magnific.scss
@@ -2,8 +2,9 @@
 
 body.register .white-popup-block {
   background: #FFF;
-  padding: 20px 30px;
+  padding: 30px;
   text-align: left;
+  min-height: 400px;
   max-width: 650px;
   margin: 40px auto;
   position: relative;
