--- a/src/bp-templates/bp-nouveau/sass/buddypress.scss
+++ b/src/bp-templates/bp-nouveau/sass/buddypress.scss
@@ -462,7 +462,7 @@ Hello, this is the BuddyPress Nouveau stylesheet.
 
 /**
 *-------------------------------------------------------------------------------
-* @section 12.0 - Register & Media classes
+* @section 12.0 - Registration Popup
 *-------------------------------------------------------------------------------
 */
 // Import global magnific popup styles
