--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -476,21 +476,14 @@ tr.bp-search-parent-field label {
 }
 
 /* Integrations - WooCommerce */
-.bp-admin-card.section-bp_woocommerce_disabled h2, .bp-admin-card.section-bp-woocommerce-section h2 {
+.bp-admin-card.section-bp_woocommerce_disabled h2 {
   background-image: url(../../images/admin/admin_icon-woocommerce.png);
 }
 
 /* Integrations - MemberPress */
-.bp-admin-card.section-bp_memberpress_disabled h2, .bp-admin-card.section-bp-memberpress-section h2 {
+.bp-admin-card.section-bp_memberpress_disabled h2 {
   background-image: url(../../images/admin/admin_icon-memberpress.png);
 }
-
-
-/* Integrations - Memberships */
-.bp-admin-card.section-bp_memberships_disabled h2, .bp-admin-card.section-bp-memberships-section h2 {
-  background-image: url(../../images/admin/admin_icon-appboss.png);
-}
-
 
 /*
  * 3.0 Content
