--- a/src/bp-templates/bp-nouveau/sass/buddypress.scss
+++ b/src/bp-templates/bp-nouveau/sass/buddypress.scss
@@ -469,3 +469,13 @@ Hello, this is the BuddyPress Nouveau stylesheet.
 
 @import "../common-styles/_bp_magnific";
 
+/**
+*-------------------------------------------------------------------------------
+* @section 13.0 - Login and Lost Password Popup
+*-------------------------------------------------------------------------------
+*/
+
+// Login and Lost Password index screen (directory)
+
+@import "../common-styles/_bp_login.scss";
+
