--- a/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
@@ -143,7 +143,7 @@ body.register {
 	}
 
 	.registration-popup {
-	  background: #FFF;
+	  background: #fff;
 	  padding: 30px;
 	  text-align: left;
 	  min-height: 400px;
