--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -2486,7 +2486,7 @@ body.register #page #primary .entry-header {
 }
 
 body.register .registration-popup {
-  background: #FFF;
+  background: #fff;
   padding: 30px;
   text-align: left;
   min-height: 400px;
