--- a/src/bp-core/admin/css/hello.css
+++ b/src/bp-core/admin/css/hello.css
@@ -95,12 +95,12 @@ TABLE OF CONTENTS:
   color: var(--bp-hello-color-primary);
 }
 
-.bp-hello-social li a.support:before {
-  content: "\f448";
-}
-
 .bp-hello-social li a.twitter:before {
   content: "\f301";
+}
+
+.bp-hello-social li a.facebook:before {
+  content: "\f304";
 }
 
 /*------------------------------------------------------------------------------
