--- a/src/bp-integrations/memberships/assets/styles/bpms.css
+++ b/src/bp-integrations/memberships/assets/styles/bpms.css
@@ -1,27 +1,24 @@
 /**
- * MemberpressProduct (memberpressproduct) Css
+ * Memberpress CSS
  */
 
-#bpms-learndash-memberpressproduct-search_courses_wrapper, #bpms-learndash-memberpressproduct-search_groups_wrapper {
+#bpms-learndash-memberpressproduct-search_courses_wrapper,
+#bpms-learndash-memberpressproduct-search_groups_wrapper {
     padding: 15px 0;
 }
+
 /**
- * WooCommerce(product) Css
+ * WooCommerce CSS
  */
 
 /* LearnDash Menu Icon */
 
-li.learndash_options a::before {
-    font-family: Dashicons !important;
-    content: '\f118' !important;
-    speak: none !important;
-    font-weight: 400 !important;
-    font-variant: normal !important;
-    text-transform: none !important;
-    line-height: 1 !important;
-    -webkit-font-smoothing: antialiased !important;
-    text-decoration: none !important;
+li.sfwd-courses_tab a:before {
+    font-family: "dashicons" !important;
+    content: "\f118" !important;
 }
-#bpms-learndash-product-search_courses_wrapper, #bpms-learndash-product-search_groups_wrapper {
+
+#bpms-learndash-product-search_courses_wrapper,
+#bpms-learndash-product-search_groups_wrapper {
     padding: 15px 0;
 }
