fixing many Grunt issues

--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -1026,7 +1026,7 @@ body.post-type-bp_ps_form .page-title-action {
 }
 
 tr.child-no-padding th {
-  padding: 0px 0 0px 10px;
+  padding: 0 0 0 10px;
 }
 
 tr.child-no-padding td {
@@ -1034,11 +1034,11 @@ tr.child-no-padding td {
 }
 
 tr.child-no-padding-first th {
-  padding: 20px 0 0px 10px;
+  padding: 20px 0 0 10px;
 }
 
 tr.child-no-padding-first td {
-  padding: 15px 10px 5px 10px;
+  padding: 15px 10px 5px;
 }
 
 td.inviter.column-inviter strong img {
