--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -69,8 +69,8 @@ TABLE OF CONTENTS:
 	min-width: 255px;
 	max-width: 100%;
 	border-radius: 6px;
-    border: 1px solid #e5e5e5;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+	border: 1px solid #e5e5e5;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
 	margin: 0 0 20px;
 	padding: 2.2em 2.8em 2em;
 }
@@ -191,23 +191,23 @@ TABLE OF CONTENTS:
 }
 
 #adminmenu li.toplevel_page_buddyboss-platform a[href="bp-plugin-seperator"] {
-  pointer-events: none;
-  cursor: default;
-  padding-bottom: 0;
-  margin-right: 16px;
-  margin-left: 14px;
-  margin-bottom: 5px;
-  border-bottom: 1px solid #555;
+	pointer-events: none;
+	cursor: default;
+	padding-bottom: 0;
+	margin-right: 16px;
+	margin-left: 14px;
+	margin-bottom: 5px;
+	border-bottom: 1px solid #555;
 }
 
 #adminmenu li.toplevel_page_buddyboss-platform a[href="bp-plugin-separator-notice"] {
-  pointer-events: none;
-  cursor: default;
-  padding-bottom: 0;
-  margin-right: 16px;
-  margin-left: 14px;
-  margin-bottom: 5px;
-  border-bottom: 1px solid #555;
+	pointer-events: none;
+	cursor: default;
+	padding-bottom: 0;
+	margin-right: 16px;
+	margin-left: 14px;
+	margin-bottom: 5px;
+	border-bottom: 1px solid #555;
 }
 
 
@@ -393,6 +393,7 @@ tr.bp-search-parent-field label {
 	color: #333;
 	border-bottom: 1px solid #eaeaea;
 }
+
 .bp-admin-card h2 span {
 	font-weight: 400;
 }
@@ -545,10 +546,11 @@ body.users_page_bp-signups td.count_sent {
 #bp-activities-form .fixed .column-author {
 	width: 15%;
 }
+
 #bp-activities-form #the-comment-list td.comment img {
 	max-width: 300px;
 	display: block;
-    margin: 0.6em 0;
+	margin: 0.6em 0;
 }
 
 /*
@@ -751,8 +753,8 @@ body.post-type-bp-email .categorydiv label {
 	margin: 0 0 20px;
 	padding: 2em 2.8em;
 	border-radius: 6px;
-    border: 1px solid #e5e5e5;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+	border: 1px solid #e5e5e5;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
 }
 
 .bp_appboss_wrap .appboss-banner-block p {
@@ -941,6 +943,7 @@ body.post-type-bp-email .categorydiv label {
 	width: 50%;
 	padding-right: 20px;
 }
+
 .bp_appboss_wrap .appboss-column:last-child {
 	padding-right: 0;
 }
@@ -950,8 +953,8 @@ body.post-type-bp-email .categorydiv label {
 .bp_appboss_wrap .appboss-small-light-block {
 	box-sizing: border-box;
 	border-radius: 6px;
-    border: 1px solid #e5e5e5;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+	border: 1px solid #e5e5e5;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
 	margin: 0 0 20px;
 	padding: 2em;
 }
@@ -1039,30 +1042,30 @@ body.post-type-bp_ps_form .page-title-action {
 }
 
 tr.child-no-padding th {
-  padding: 0px 10px 0px 0;
+	padding: 0 10px 0 0;
 }
 
 tr.child-no-padding td {
-  padding: 5px 10px;
+	padding: 5px 10px;
 }
 
 tr.child-no-padding-first th {
-  padding: 20px 10px 0px 0;
+	padding: 20px 10px 0 0;
 }
 
 tr.child-no-padding-first td {
-  padding: 15px 10px 5px 10px;
+	padding: 15px 10px 5px;
 }
 
 td.inviter.column-inviter strong img {
-  float: left;
-  margin-right: 10px;
-  margin-top: 1px;
+	float: left;
+	margin-right: 10px;
+	margin-top: 1px;
 }
 
 td label.platform-activity {
-  clear: left;
-  display: block;
-  line-height: 1.5;
-  margin: 0 0 1em;
+	clear: left;
+	display: block;
+	line-height: 1.5;
+	margin: 0 0 1em;
 }
