--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -405,13 +405,14 @@
 }
 
 .activity-url-scrapper-container {
+
 	.activity-url-scrapper-loading {
 		margin-top: 40px;
 	}
 
 	#activity-url-scrapper {
-		border: 1px solid rgba(0,0,0,0.07);
-		background-color: rgba(250,250,250,0.2);
+		border: 1px solid rgba(0, 0, 0, 0.07);
+		background-color: rgba(250, 250, 250, 0.2);
 		margin: 20px 0 10px;
 		overflow: hidden;
 		position: relative;
@@ -433,7 +434,7 @@
 			#activity-close-link-suggestion:after {
 				content: "\f00d";
 				display: inline-block;
-				font: normal normal normal 20px/1 'Font Awesome 5 Free';
+				font: normal normal 400 20px/1 "Font Awesome 5 Free";
 				text-rendering: auto;
 				vertical-align: bottom;
 				-webkit-font-smoothing: antialiased;
@@ -442,11 +443,14 @@
 		}
 
 		#activity-url-scrapper-img-holder {
-			td { border: none; }
+
+			td {
+				border: none;
+			}
 
 			#activity-url-scrapper-img {
 				background-position: center;
-				background-color: white;
+				background-color: #fff;
 				background-repeat: no-repeat;
 				background-size: contain;
 				text-align: center;
@@ -485,7 +489,7 @@
 		}
 
 		#activity-url-scrapper-text-holder #activity-url-scrapper-title {
-			font-weight: bold;
+			font-weight: 600;
 			font-size: 16px;
 			margin-bottom: 5px;
 		}
@@ -493,7 +497,7 @@
 }
 
 #activity-url-error {
-	color: #FF0000;
+	color: #f00;
 }
 
 #activity-url-scrapper-url {
@@ -501,9 +505,16 @@
 	font-size: 14px;
 }
 
-.activity-link-preview-title { display: block; margin-bottom: 5px; margin-right: 5px; }
+.activity-link-preview-title {
+	display: block;
+	margin-bottom: 5px;
+	margin-right: 5px;
+}
 
-.activity-link-preview-title > a {  font-size: 16px; font-weight: 700; }
+.activity-link-preview-title > a {
+	font-size: 16px;
+	font-weight: 700;
+}
 
 #activity-close-link-suggestion {
 	border: 0;
@@ -525,7 +536,8 @@
 	text-decoration: none;
 }
 
-#activity-close-link-suggestion:focus, #activity-link-preview-close-image:focus {
+#activity-close-link-suggestion:focus,
+#activity-link-preview-close-image:focus {
 	outline: 0;
 }
 
@@ -577,6 +589,7 @@
 
 /* Media query for only large devices */
 @media only screen and (min-width: 481px) {
+
 	.activity-url-scrapper-container #activity-url-scrapper #activity-url-scrapper-img-holder {
 		border: none;
 		float: left;
@@ -614,9 +627,11 @@
 
 /* Media query for only small devices */
 @media only screen and (max-width: 480px) {
+
 	.activity-link-preview-image {
 		margin-bottom: 20px;
 	}
+
 	#activity-link-preview-close-image {
 		right: 22px;
 		top: 17px;
@@ -624,8 +639,9 @@
 }
 
 @media only screen and  ( max-width: 640px ) {
+
 	.activity-link-preview-content {
-		width: 100%;;
+		width: 100%;
 		clear: both;
 	}
 }
