--- a/src/bp-core/admin/sass/hello.scss
+++ b/src/bp-core/admin/sass/hello.scss
@@ -1,5 +1,5 @@
 /*------------------------------------------------------------------------------
-Loaded in wp-admin for query string `hello=buddypress`.
+Loaded in wp-admin for query string `hello=buddyboss`.
 
 @since BuddyPress 3.0.0
 
