multiline tooltip line break added between like usernames

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_tooltips.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_tooltips.scss
@@ -3,6 +3,10 @@
 
 @import "hint/hint";
 
+.hint--multiline::after {
+	white-space: pre;
+}
+
 [data-bp-tooltip] {
 	cursor: pointer;
 	position: relative;
