--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1584,17 +1584,27 @@ a.layout-grid-view {
   clear: both;
 }
 
+.activity-list .activity-item .activity-content .activity-state .activity-state-likes,
+.activity-list .activity-item .activity-content .activity-state .ac-state-separator,
+.activity-list .activity-item .activity-content .activity-state .activity-state-comments {
+  display: none;
+}
+
 .activity-list .activity-item .activity-content .activity-state a {
   border: 0;
   padding: 0;
 }
 
-.activity-list .activity-item .activity-content .activity-state.has-likes, .activity-list .activity-item .activity-content .activity-state.has-comments {
-  display: block;
+.activity-list .activity-item .activity-content .activity-state.has-likes .activity-state-likes {
+  display: inline-block;
 }
 
-.activity-list .activity-item .activity-content .activity-state .ac-state-separator {
-  display: none;
+.activity-list .activity-item .activity-content .activity-state.has-comments .activity-state-comments {
+  display: inline-block;
+}
+
+.activity-list .activity-item .activity-content .activity-state.has-likes, .activity-list .activity-item .activity-content .activity-state.has-comments {
+  display: block;
 }
 
 .activity-list .activity-item .activity-content .activity-state.has-likes.has-comments .ac-state-separator {
